# sol-sim

./: CMakeLists.txt  Makefile  README.md
apps/: solarsim_cli.cpp  solarsim_viewer.cpp
tests/: CMakeLists.txt  test_hello.cpp
